<resources>
    <string name="login_screen_name">Login</string>
    <string name="make_account_screen_name">Make Account</string>
    <string name="main_menu_screen_name">Menu</string>
    <string name="about_screen_name">About</string>
    <string name="highscore_screen_name">Highscores</string>
    <string name="quiz_screen_name">Quiz</string>


    <string name="button_make_account">Make Account</string>
    <string name="button_make_account_login">Login</string>
    <string name="button_menu_about">About</string>
    <string name="button_menu_highscore">Highscore</string>
    <string name="button_menu_play">Play</string>
    <string name="button_menu_logout">Log out</string>
    <string name="button_go_back">Back</string>


    <string name="text_login_email">Email</string>
    <string name="text_login_password">Password</string>
    <string name="text_make_account_last_name">Last Name</string>
    <string name="text_make_account_first_name">First Name</string>
    <string name="etEmail">Email</string>
    <string name="send_password_reset_email">Send Password Reset Email</string>

    <!-- ... -->
    <string name="facebook_application_id" translatable="false">APP_ID</string>
    <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fbAPP_ID</string>
</resources>
