<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main_menu">

    <Button
            android:text="@string/button_menu_play"
            android:layout_width="123dp"
            android:layout_height="97dp"
            android:id="@+id/button_menu_play" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintVertical_bias="0.454"/>
    <Button
            android:text="@string/button_menu_logout"
            android:layout_width="211dp"
            android:layout_height="45dp"
            android:id="@+id/button_menu_logout" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintVertical_bias="0.927"/>
    <Button
            android:text="@string/button_menu_about"
            android:layout_width="123dp"
            android:layout_height="97dp"
            android:id="@+id/button_menu_about" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.097"
            app:layout_constraintVertical_bias="0.042"/>
    <Button
            android:text="@string/button_menu_highscore"
            android:layout_width="123dp"
            android:layout_height="97dp"
            android:id="@+id/buttons_menu_highscore" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.824"
            app:layout_constraintVertical_bias="0.042"/>
</android.support.constraint.ConstraintLayout>